--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^15.1.2
+  flutter_riverpod: ^2.6.1
+  go_router: ^15.2.3
+  riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
