--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,11 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  firebase_core: ^4.0.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
-  go_router: ^15.2.3
+  go_router: ^16.2.0
   riverpod: ^2.6.1
 
 dev_dependencies:
