--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   go_router: ^16.2.0
   riverpod: ^2.6.1
+  cloud_firestore: 6.0.0 
 
 dev_dependencies:
   flutter_test:
