--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   go_router: ^16.2.0
   riverpod: ^2.6.1
   cloud_firestore: 6.0.0 
+  firebase_auth: ^6.1.0
 
 dev_dependencies:
   flutter_test:
